finished Lesson 6 Personal Assignment, added logic to run swagger autogen before starting the application every time so that hopefully Heroku will generate its own swagger.json and I won't have to change that before commits from now on
